2009-08-24  Darren Kenny  <darren.kenny@sun.com>

	* capplet/nwam_location_dialog.c: 
	  Fix incorrect use of toggled_env in apply() which caused a crash
	  where it could sometimes be NULL.
	  Fix defect#10802, where the Rules button wasn't being enabled when
	  an activated by rules location was selected.

2009-08-24  Darren Kenny  <darren.kenny@sun.com>

	* common/libnwamui.c:
	  Fix defect#10876 where comma separated string was being incorrectly
	  constructed in nwamui_util_glist_to_comma_string().
	* common/nwamui_wifi_net.c: 
	  Fix mis-match of type of wep key property and declared type.

2009-08-24  Darren Kenny  <darren.kenny@sun.com>

	* configure.in:
	  Bump to 0.99.7
	* common/nwamui_daemon.c: 
	  Fix some minor warnings, and change DEBUG_STATUS to take correct
	  list of params.
	* common/libnwamui.c, common/nwamui_ncu.c, common/nwamui_ncu.h:
	  Add basic support for Duplicate Addresses aux state.
	* nwam_core/lib/i386/libnwam.so.1, nwam_core/lib/sparc/libnwam.so.1,
	  nwam_core/usr/include/libdlwlan.h, nwam_core/usr/include/libnwam.h:
	  Update to latest to fix defect#10767.
	* autogen.sh:
	  Fix typo

2009-08-21  Lin Ma  <Lin.Ma@Sun.COM>

	* capplet/nwam_conn_stat_panel.c (nwam_compose_tree_view):
	Fixed 10769 cannot launch nwam-manager-properties - sparc

2009-08-20  Lin Ma  <Lin.Ma@Sun.COM>

	* configure.in: Uses absolute pathes for private headers/libs.

2009-08-20  Lin Ma  <Lin.Ma@Sun.COM>

	* capplet/nwam_condition_vbox.c (_cu_cond_combo_filter_visible_cb):
	* common/nwamui_cond.c (nwamui_cond_field_to_str):
	Fixed 9655 edit rules active connections - has incorrect options
	listed.
	* common/nwamui_daemon.c
	(nwamui_daemon_update_status_from_object_state_event):
	Removed undefined symbol due to new nwam header.
	* configure.in:
	Add options: --enable-private-nwam-headers/libs
	* daemon/nwam-enm-item.c (on_nwam_enm_notify):
	10561 right click icon menu should grey out vpn 'stop' when app
	activated by rules